# presenations

./: .gitignore  README.md  can-we-have-a-better-fs.md  ci-cd-at-absa.md  devconfus2021-framework-for-integration-tests.md  pycharm-masterclass.md  pyproject.toml  pytest-generic.md  pytest-presentation.md  testing-paylocity-2024.md  tmt-pytest.md
resources/: conftest.py  test_examples.py
